modules/instance/resource_vpc.tf
resource "aws_vpc" "terraform" {
cidr_block=var.cidr_range
instance_tenancy="default"

tags={
Name=var.vpc_name
}
}

resource "aws_subnet" "public" {
vpc_id=aws_vpc.terraform.id
cidr_block=var.subnet_range_pub
availability_zone=var.subnet_public_zone

tags={
Name=var.sn_public_name
}
}

resource "aws_subnet" "private" {
vpc_id=aws_vpc.terraform.id
cidr_block=var.subnet_range_pri
availability_zone=var.subnet_private_zone


tags={
Name=var.sn_private_name
}
}
